Bug 342789 - Lokalize saves time zone in PO-Revision-Date using an abbreviation instead of an offset
Summary: Lokalize saves time zone in PO-Revision-Date using an abbreviation instead of...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-13 07:52 UTC by Lasse Liehu
Modified: 2015-09-13 21:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2015-01-13 07:52:22 UTC
Using KF5-based Lokalize from master, PO-Revision-Date is saved like this: "PO-Revision-Date: 2015-01-12 00:15EET\n"

Instead of like this: "PO-Revision-Date: 2015-01-12 00:15+0200\n"

At least a2po doesn't understand time zone abbreviations.

Reproducible: Always
Comment 1 Nick Shaforostoff 2015-01-13 23:58:24 UTC
Git commit 145e88bd85c9044d467b4fd06f6b1b07aa3324cc by Nick Shaforostoff.
Committed on 14/01/2015 at 01:57.
Pushed by shaforo into branch 'master'.

save timezone info exactly as before

M  +6    -2    src/catalog/gettextheader.cpp
M  +1    -1    src/nokde-stubs/prefs.cpp

http://commits.kde.org/lokalize/145e88bd85c9044d467b4fd06f6b1b07aa3324cc
Comment 2 Weng Xuetian 2015-09-13 19:16:00 UTC
Hi, I'd like to reopen this bug.

Someone fixed a invalid date for the po file that I updateed, but the file is generated by lokalize.
See https://websvn.kde.org/?view=revision&revision=1437990

Seems like there is an extra "UTC" string here.
 "PO-Revision-Date: 2015-09-12 15:36UTC-0800\n"
Comment 3 Weng Xuetian 2015-09-13 19:45:25 UTC
https://git.reviewboard.kde.org/r/125215/
Comment 4 Weng Xuetian 2015-09-13 21:31:31 UTC
Git commit 7c257f5c37c885d508dd67803cfad21860ddce93 by Weng Xuetian.
Committed on 13/09/2015 at 21:30.
Pushed by xuetianweng into branch 'Applications/15.08'.

Fix saving date for timezone with negative offset

Check the '-' sign return from QTimeZone together with '+'.

REVIEW: 125215
FIXED-IN: 15.08.1

M  +1    -1    src/catalog/gettextheader.cpp

http://commits.kde.org/lokalize/7c257f5c37c885d508dd67803cfad21860ddce93