Fix saving date for timezone with negative offset

Check the '-' sign return from QTimeZone together with '+'.

REVIEW: 125215
BUG: 342789
FIXED-IN: 15.08.1